--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Basket.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Basket.cshtml
@@ -4,9 +4,7 @@
 }
 <div class="page-content pt-7 pb-10">
     <div class="step-by pr-4 pl-4">
-        <h3 class="title title-simple title-step active"><a href="cart.html">Səbət</a></h3>@*
-            <h3 class="title title-simple title-step"><a href="checkout.html">2. Checkout</a></h3>
-            <h3 class="title title-simple title-step"><a href="order.html">3. Order Complete</a></h3>*@
+        <h3 class="title title-simple title-step active"><a href="#">Səbət</a></h3>
     </div>
     <div class="container mt-7 mb-2">
         <div class="row">
@@ -75,13 +73,6 @@
                 }
                 <div class="cart-actions mb-6 pt-4">
                     <a asp-action="Index" class="btn btn-dark btn-md btn-rounded btn-icon-left mr-4 mb-4"><i class="d-icon-arrow-left"></i>Continue Shopping</a>
-                    <button type="submit" class="btn btn-outline btn-dark btn-md btn-rounded btn-disabled">Update Cart</button>
-                </div>
-                <div class="cart-coupon-box mb-8">
-                    <h4 class="title coupon-title text-uppercase ls-m">Coupon Discount</h4>
-                    <input type="text" name="coupon_code" class="input-text form-control text-grey ls-m mb-4"
-                           id="coupon_code" value="" placeholder="Enter coupon code here...">
-                    <button type="submit" class="btn btn-md btn-dark btn-rounded btn-outline">Apply Coupon</button>
                 </div>
             </div>
             @if (Model.Count > 0)
@@ -100,7 +91,7 @@
                                     </td>
                                 </tr>
                             </table>
-                            <a id="placeOrderBtn" onclick="placeOrder()" class="btn btn-dark btn-rounded btn-checkout">Səbəti Təsdiqlə</a>
+                            <a href="#" id="placeOrderBtn" onclick="placeOrder()" class="btn btn-dark btn-rounded btn-checkout">Səbəti Təsdiqlə</a>
                         </div>
                     </div>
                 </aside>
