--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Search.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Search.cshtml
@@ -21,19 +21,13 @@
                     <div class="product">
                         <figure class="product-media">
                             <a asp-action="Details" asp-route-id="@item.Id">
-                                <img src="~/uploads/images/@item.ImagePath" alt="product" width="280" height="315">
+                                <img src="~/uploads/images/@item.ImagePath" alt="@item.Name" width="280" height="315">
                             </a>
                             <div class="product-label-group">
                                 <label class="product-label label-new">new</label>
                             </div>
                             <div class="product-action-vertical">
                                 <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"><i class="d-icon-heart"></i></a>
-                            </div>
-                            <div class="product-action">
-                                <a href="#" class="btn-product btn-quickview" title="Quick View">
-                                    Quick
-                                    View
-                                </a>
                             </div>
                         </figure>
                         <div class="product-details">
