--- a/Auto-Part/Auto-Part-WebUI/Views/Shop/Wishlist.cshtml
+++ b/Auto-Part/Auto-Part-WebUI/Views/Shop/Wishlist.cshtml
@@ -38,7 +38,7 @@
                                     <a asp-action="details" asp-route-id="@item.Id">
                                         <figure>
                                             <img src="~/uploads/images/@item.ImagePath" width="100" height="100"
-                                                 alt="product">
+                                                 alt="@item.Name">
                                         </figure>
                                     </a>
                                 </td>
@@ -49,22 +49,14 @@
                                     <span class="amount">@item.PartCodeName</span>
                                 </td>
                                 <td class="product-stock-status">
-                                    @if (item.Quantity > 0)
-                                    {
-                                        <span class="wishlist-in-stock">Anbarda</span>
-                                    }
-                                    else
-                                    {
-                                        <span class="wishlist-out-stock">Stokda yoxdur</span>
-                                    }
-
+                                    <span class="wishlist-in-stock">Anbarda</span>
                                 </td>
                                 <td class="product-add-to-cart">
                                     <a asp-action="details" asp-route-id="@item.Id" class="btn-product btn-primary"><span>Seçim edin</span></a>
                                 </td>
                                 <td class="product-remove">
                                     <div>
-                                        <a onclick="removeEntity(@item.Id)" class="remove" title="Remove this product">
+                                        <a href="#" onclick="removeEntity(@item.Id)" class="remove" title="Remove this product">
                                             <i class="fas fa-times"></i>
                                         </a>
                                     </div>
@@ -81,20 +73,6 @@
                     <h1 class="emptyBasketText">Seçilmişlər siyahısı boşdur</h1>
                 </div>
             }
-
-            <div class="social-links share-on">
-                <h5 class="text-uppercase font-weight-bold mb-0 mr-4 ls-s">Paylaş:</h5>
-                <a href="#" class="social-link social-icon social-facebook" target="_blank"
-                   title="Facebook"><i class="fab fa-facebook-f"></i></a>
-                <a href="#" class="social-link social-icon social-twitter" target="_blank"
-                   title="Twitter"><i class="fab fa-twitter"></i></a>
-                <a href="#" class="social-link social-icon social-pinterest" target="_blank"
-                   title="Pinterest"><i class="fab fa-pinterest-p"></i></a>
-                <a href="#" class="social-link social-icon social-email" target="_blank"
-                   title="Email"><i class="far fa-envelope"></i></a>
-                <a href="#" class="social-link social-icon social-whatsapp" target="_blank"
-                   title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
-            </div>
         </div>
     </div>
 </main>
